--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -10,10 +10,10 @@
                 <ul>
                     <% orders.forEach(order => { %>
                         <li>
-                            <h1># <%= order.id %></h1>
+                            <h1># <%= order._id %></h1>
                             <ul>
-                                <% order.products.forEach(product => { %>
-                                    <li><%= product.title %> (<%= product.orderItem.quantity %>)</li>
+                                <% order.items.forEach(item => { %>
+                                    <li><%= item.title %> (<%= item.quantity %>)</li>
                                 <% }); %>
                             </ul>
                         </li>
