--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -9,14 +9,13 @@
     <main>
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
-                <label for="email">Email</label>
-                <input type="text" name="email" id="email" />
+                <label for="email">E-Mail</label>
+                <input type="email" name="email" id="email">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="text" name="password" id="password" />
+                <input type="password" name="password" id="password">
             </div>
-
             <button class="btn" type="submit">Login</button>
         </form>
     </main>
