--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -18,7 +18,7 @@
             <input type="hidden" name="userId" value="<%= userId %>">
             <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">New Password</button>
+            <button class="btn" type="submit">Update Password</button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %>
