introduce stripe to handle payment

--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -17,5 +17,18 @@
     <div class="centered">
         <h2>Total: <%= totalSum %></h2>
     </div>
+    <div class="centered">
+        <button id="order-btn" class="btn">ORDER</button>
+        <script src="https://js.stripe.com/v3/"></script>
+        <script>
+            var stripe = Stripe('pk_test_51KJ97FBCTubdhATJxrObHKpkehSihinQAnuv8Q1XqquNSmw8lemBer5E5diOVwMim9ValmCKkF8nY3Ed3UXIgIwn00B5VMHeVO');
+            var orderBtn = document.getElementById('order-btn');
+            orderBtn.addEventListener('click', () => {
+                stripe.redirectToCheckout({
+                    sessionId: '<%= sessionId %>'
+                })
+            });
+        </script>
+    </div>
 </main>
 <%- include('../includes/end.ejs') %>
